--- a/transport/doc/dissertation/content/discretization.tex
+++ b/transport/doc/dissertation/content/discretization.tex
@@ -5,43 +5,67 @@
 The continuous Galerkin finite element method is used for spatial discretization.
 The numerical solution is thus
 \begin{equation}
-   \psi(\x,t) = \sum\limits_{j=1}^N U_j(t) \varphi_j(\x),
+   u_h(\x,t) = \sum\limits_{j=1}^N U_j(t) \varphi_j(\x) \eqc
 \end{equation}
 where $N$ is the number of degrees of freedom in the finite element expansion,
 $U_j(t)$ are nodal solution values at time $t$, and $\varphi_j(\x)$
-are linear basis functions. Multiplying Equation \eqref{tr} by $c$ and testing
+are linear basis functions. Substituting the approximate solution into
+Equation \eqref{eq:cons_law} and testing
 with basis function $\varphi_i(\x)$ gives
 \begin{equation}
-   \int\limits_{S_i}\frac{\partial \psi}{\partial t}\varphi_i(\x) d\x
-      + c\int\limits_{S_i}\left(\mathbf{\Omega}\cdot\nabla\psi(\x,t)
-      + \sigma(\x)\psi(\x,t)\right)\varphi_i(\x) d\x
-      = c\int\limits_{S_i} q(\x,t) \varphi_i(\x) d\x,
+   \int\limits_{S_i}\pd{u_h}{t}\varphi_i(\x) dV
+      + \int\limits_{S_i}\left(\nabla\cdot\g(u_h)
+      + \sigma(\x)u_h(\x,t)\right)\varphi_i(\x) dV
+      = \int\limits_{S_i} q(\x,t) \varphi_i(\x) dV \eqc
 \end{equation}
-where $S_i$ is the support of $\varphi_i(\x)$.
-This yields a linear system
+where $S_i$ is the support of $\varphi_i(\x)$. If the flux function
+$\g(u)$ is linear, then the system to be solved is linear:
 \begin{equation}\label{semidiscrete}
-   \M^C\frac{d\U}{dt}+\A \U(t) = \b(t),
+   \M^C\frac{d\U}{dt}+\A \U(t) = \b(t) \eqc
 \end{equation}
 where $\A$ is the steady-state system matrix and $\U$ is the
-Galerkin solution. The elements of $\A$ are
+vector of discrete solution values. If the velocity field $\v$ is
+constant, then the elements of $\A$ are
 \begin{equation}\label{Aij}
-	A_{i,j} \equiv c\int\limits_{S_{i,j}}\left(
-      \mathbf{\Omega}\cdot\nabla\varphi_j(\x) +
-		\sigma(\x)\varphi_j(\x)\right)\varphi_i(\x) d\x,
+A_{i,j} \equiv \int\limits_{S_{i,j}}\left(
+   \v\cdot\nabla\varphi_j(\x) +
+   \sigma(\x)\varphi_j(\x)\right)\varphi_i(\x) dV \eqc
 \end{equation}
 where $S_{i,j}$ is the dual support of $\varphi_i(\x)$ and $\varphi_j(\x)$.
+Otherwise, the divergence of the velocity field appears:
+\begin{equation}\label{eq:Aij_nonconstant_v}
+A_{i,j} \equiv \int\limits_{S_{i,j}}\left(
+   \v\cdot\nabla\varphi_j(\x) +
+   (\sigma(\x)+\nabla\cdot\v)\varphi_j(\x)\right)\varphi_i(\x) dV \eqp
+\end{equation}
+If the flux function $\g(u)$ is nonlinear, then the system is
+nonlinear, but it may be expressed in a quasilinear form:
+\begin{equation}\label{eq:semi_quasilinear}
+   \M^C\frac{d\U}{dt}+\A(u_h) \U(t) = \b(t) \eqc
+\end{equation}
+where $u_h\xt$ is the numerical solution, and the quasilinear
+matrix (i.e., the Jacobian matrix) entries are
+\begin{equation}\label{eq:Aij_nonlinear}
+A_{i,j}(u_h) \equiv \int\limits_{S_{i,j}}\left(
+   \g'(u_h)\cdot\nabla\varphi_j(\x) +
+   (\sigma(\x)+\nabla\cdot\v)\varphi_j(\x)\right)\varphi_i(\x) dV \eqp
+\end{equation}
 The elements of $\b(t)$ are
 \begin{equation}
-	b_i(t) \equiv c\int\limits_{S_i} q(\x,t)\varphi_i(\x) d\x.
+	b_i(t) \equiv \int\limits_{S_i} q(\x,t)\varphi_i(\x) dV \eqp
 \end{equation}
 $\M^C$ is the consistent mass matrix, which has the entries
 \begin{equation}\label{massmatrix}
-	m_{i,j} \equiv \int\limits_{S_{i,j}}
-   \varphi_j(\x)\varphi_i(\x) d\x.
+	M^C_{i,j} \equiv \int\limits_{S_{i,j}}
+   \varphi_j(\x)\varphi_i(\x) dV \eqp
 \end{equation}
-Similarly, for the steady-state case, the linear system is
+Similarly, for the linear steady-state case, the linear system is
 \begin{equation}
-  \A\U = \b.
+  \A\U = \b \eqc
+\end{equation}
+or for the nonlinear case,
+\begin{equation}
+  \A(u_h)\U = \b \eqp
 \end{equation}
 %================================================================================
 \subsection{Temporal Discretization}
@@ -66,16 +90,18 @@ following form for a given time step $t^n\rightarrow t^{n+1}$,
 where $\hat{\U}^i$ denotes the $i$th stage solution:
 \begin{equation}
    \hat{\U}^i = \alpha_i\hat{\U}^0
-   + \beta_i\,\mbox{step}(\hat{\U}^{i-1},t^n+c_i\Delta t),
+%   + \beta_i\,\mbox{step}(\hat{\U}^{i-1},t^n+c_i\Delta t),
+   + \beta_i\tilde{\U}^i \eqc
 \end{equation}
 where $\Delta t=t^{n+1}-t^n$, $\hat{\U}^0=\U^n$,
-and $\mbox{step}(\U,t)$
-is a function that returns the solution $\U^{new}$ to the linear system
+and $\tilde{\U}^i$ is the solution of the following forward Euler
+step:
 \begin{equation}
-   \M\U^{new} = \M\U
-   + \Delta t(\b(t) - \A(t)\U),
+   \M\tilde{\U}^i = \M\hat{\U}^{i-1}
+   + \Delta t(\b(t_i) - \A(t_i)\hat{\U}^{i-1}) \eqc
 \end{equation}
-where $\M$ is the mass matrix, $\b(t)$ is the steady-state
+where $t_i = t^n+c_i\Delta t$,
+$\M$ is the mass matrix, $\b(t)$ is the steady-state
 right hand side vector, and $\A(t)$ is the steady-state matrix.
 Therefore the function performs a time step that is similar to an
 explicit Euler step, except that the steady-state residual is not
