--- a/transport/doc/dissertation/content/transient_FCT.tex
+++ b/transport/doc/dissertation/content/transient_FCT.tex
@@ -2,30 +2,29 @@
 \subsection{Transient FCT Schemes}
 %--------------------------------------------------------------------------------
 In this section, the general FCT scheme for the transient case is presented.
-The flux correction vector $\f(t)$ is defined such that
+The flux correction vector $\f$ is defined such that
 \begin{equation}\label{fdef_semidiscrete}
-   \M^L\ddt{U^{H}} + \A^L\U^H(t) = \b(t) + \f(t) \eqp
+   \M^L\ddt{U^{H}} + \A^L\U^H(t) = \b(t) + \f \eqp
 \end{equation}
-Decomposing the correction flux into $\F(t)$ and applying a limiter $\L$ gives
+Decomposing the correction flux into $\F$ and applying a limiter $\L$ gives
 \begin{equation}\label{limited_semidiscrete}
-   \M^L\ddt{\U} + \A^L\U(t) = \b(t) + \LF(t) \eqp
+   \M^L\ddt{\U} + \A^L\U(t) = \b(t) + \LF \eqp
 \end{equation}
-where $(\LF(t))_i = L_{i,:}F_{i,:}^T = \sumj L\ij F\ij$
+where $(\LF)_i = L_{i,:}F_{i,:}^T = \sumj L\ij F\ij$
 and $\U(t)$ is the FCT solution. The limiter $\L$ is
 defined in Section \ref{L}.
 Combining Equations \eqref{fdef_semidiscrete} and \eqref{high_semidiscrete}
-gives the definition of $\f(t)$:
+gives the definition of $\f$:
 \begin{equation}\label{f_semidiscrete}
-   \f(t) \equiv -\pr{\M^C-\M^L}\ddt{\U^H} + \pr{\D^L-\D^H(t)}\U^H(t).
+   \f \equiv -\pr{\M^C-\M^L}\ddt{\U^H} + \pr{\D^L-\D^H(t)}\U^H(t) \eqp
 \end{equation}
 Since $\M^C-\M^L$ and $\D^L-\D^H(t)$ are symmetric
-and feature zero row and column sums, a valid decomposition for $\f(t)$,
-called $\F(t)$, is
+and feature zero row and column sums, a valid decomposition for $\f$,
+called $\F$, is
 \begin{equation}
-   F\ij(t) = -m\ij\pr{\ddt{U_j^H} - \ddt{U_i^H}}
-   + \pr{D\ij^L-D\ij^H(t)}\pr{U_j^H(t) - U_i^H(t)},
+   F\ij = -M^C\ij\pr{\ddt{U_j^H} - \ddt{U_i^H}}
+   + \pr{D\ij^L-D\ij^H(t)}\pr{U_j^H(t) - U_i^H(t)} \eqp
 \end{equation}
-where $m\ij$ is the $i,j$th element of the consistent mass matrix.
 %--------------------------------------------------------------------------------
 \subsubsection{Explicit Euler FCT Scheme}
 %--------------------------------------------------------------------------------
@@ -51,11 +50,10 @@ Since $\M^C-\M^L$ and $\D^L-\D^{H,n}$ are symmetric
 and feature zero row and column sums, a valid decomposition for $\f$,
 called $\F$, is
 \begin{equation}
-   F\ij = -m\ij\pr{\frac{U_j^H - U_j^n}{\dt^{n+1}}
+   F\ij = -M^C\ij\pr{\frac{U_j^H - U_j^n}{\dt^{n+1}}
    - \frac{U_i^H - U_i^n}{\dt^{n+1}}}
-   + \pr{D\ij^L-D\ij^{H,n}}\pr{U_j^n - U_i^n},
+   + \pr{D\ij^L-D\ij^{H,n}}\pr{U_j^n - U_i^n} \eqp
 \end{equation}
-where $m\ij$ is the $i,j$th element of the consistent mass matrix.
 %--------------------------------------------------------------------------------
 \subsubsection{Theta FCT Scheme}
 %--------------------------------------------------------------------------------
@@ -86,12 +84,11 @@ Since $\M^C-\M^L$ and $\D^L-\D^{H,n}$ are symmetric
 and feature zero row and column sums, a valid decomposition for $\f$,
 called $\F$, is
 \begin{multline}
-   F\ij = -m\ij\pr{\frac{U_j^H - U_j^n}{\dt^{n+1}}
+   F\ij = -M^C\ij\pr{\frac{U_j^H - U_j^n}{\dt^{n+1}}
    - \frac{U_i^H - U_i^n}{\dt^{n+1}}}
    + (1-\theta)\pr{D\ij^L-D\ij^{H,n}}  \pr{U_j^n - U_i^n}\\
-   + \theta    \pr{D\ij^L-D\ij^{H,n+1}}\pr{U_j^H - U_i^H} \eqc
+   + \theta    \pr{D\ij^L-D\ij^{H,n+1}}\pr{U_j^H - U_i^H} \eqp
 \end{multline}
-where $m\ij$ is the $i,j$th element of the consistent mass matrix.
 %--------------------------------------------------------------------------------
 %\begin{proposition}{Discrete $L^\infty$ Norm Stability}
    %Schemes that satisfy the bounds given in Definition \ref{FCTbounds} are
