--- a/transport/doc/results/problem_descriptions.tex
+++ b/transport/doc/results/problem_descriptions.tex
@@ -147,3 +147,59 @@ Exact Solution & $u(\x,t) = u_b + u_q$\\
 \bottomrule\end{tabular}
 \end{table}
 %================================================================================
+\subsection{1-D Steady-State Sinusoidal MMS Problem}\label{sec:mms_sin_ss}
+$x\in(0,\frac{\pi}{4})$
+
+$u(x) = \sin(x) + u^{inc}$
+
+$q(x) = v_x\cos(x) + \sigma(\sin(x) + u^{inc})$
+
+$u(x,t) = e^{\alpha t}\sin(x) + u^{inc}$
+
+$q(x,t) = \alpha e^{\alpha t}\sin(x) + v_x e^{\alpha t}\cos(x)
+   + \sigma(e^{\alpha t}\sin(x) + u^{inc})$
+
+2-D ss:
+
+$u(x,y) = \sin(x) + \sin(y) + u^{inc}$
+
+$q(x,y) = v_x\cos(x) + v_y\cos(y) + \sigma(\sin(x) + u^{inc})$
+
+tr:
+
+$u(x,y,t) = e^{\alpha t}\pr{\sin(x) + \sin(y)} + u^{inc}$
+
+$q(x,y,t) = \alpha e^{\alpha t}\pr{\sin(x) + \sin(y)}
+   + e^{\alpha t}\pr{v_x \cos(x) + v_y \cos(y)}
+   + \sigma(e^{\alpha t}\pr{\sin(x) + \sin(y)} + u^{inc})$
+
+%This problem examines the angular flux travelling in the $+x$ direction,
+%starting in a void and reaching a strong absorber region.
+%Table \ref{tab:void_to_absorber} summarizes the test parameters.
+%
+%\begin{table}[h]\caption{Void-to-Absorber Test Problem Summary}
+%\label{tab:void_to_absorber}
+%\centering
+%\begin{tabular}{l l}\toprule
+%\emph{Parameter} & \emph{Value}\\\midrule
+%Domain & $\mathcal{D} = (0,1)^d$\\
+%Initial Conditions & $u_0(\x)=0$\\
+%Boundary Conditions & $u(\x,t)=1,\quad \x\in\partial\mathcal{D}^-,\quad t>0,
+%   \quad\partial\mathcal{D}^-=\{\x\in\partial\mathcal{D}:\mathbf{n}(\x)
+%   \cdot\mathbf{\Omega}<0\}$\\
+%Direction & $\mathbf{\Omega} = \mathbf{e}_x$\\
+%Cross Section & $\sigma(\x)=\left\{\begin{array}{c l}
+%   10, & \x\in(\frac{1}{2},1)^d\\
+%   0,  & \mbox{otherwise}\end{array}\right.$\\
+%Source & $q(\x,t)=0$\\
+%Speed & $c=1$\\
+%Exact Solution & $u(\x,t)=\left\{\begin{array}{l l}
+%   \left\{\begin{array}{l l}
+%      e^{-10(x-\frac{1}{2})}, & x\ge\frac{1}{2}, y\ge\frac{1}{2}, z\ge\frac{1}{2}\\
+%      1,                      & \mbox{otherwise}
+%   \end{array}\right., & x-t<0\\
+%   0, & \mbox{otherwise}
+%   \end{array}\right.$ \\
+%\bottomrule\end{tabular}
+%\end{table}
+%================================================================================
